# mogdb

./: .env.example  .gitignore  Cargo.toml
.githooks/: pre-commit
crates/mogdb-core/: Cargo.toml
crates/mogdb-core/src/: error.rs  lib.rs  types.rs
crates/mogdb-storage/: Cargo.toml
crates/mogdb-storage/src/: audit.rs  conflict.rs  conflict_test.rs  db.rs  decay.rs  embedding.rs  entity.rs  extraction.rs  extraction_test.rs  forget.rs  lib.rs  memory.rs  pipeline.rs  reranking.rs  scoring.rs  scoring_test.rs  search.rs
crates/mogdb-workers/: Cargo.toml
crates/mogdb-workers/src/: consolidation.rs  decay.rs  error.rs  forget.rs  lib.rs  llm.rs  scanner.rs
migrations/: 001_initial.sql  002_pgvector.sql  003_forget_policies.sql
src/: explorer.html  main.rs  middleware.rs  models.rs  routes.rs
tests/: e2e.rs  e2e_embedding.rs  e2e_search.rs  e2e_search_adversarial.rs
