[package]
name = "mogdb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mogdb-core = { path = "../mogdb-core" }

sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
