[package]
name = "mogdb-workers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mogdb-core    = { path = "../mogdb-core" }
mogdb-storage = { path = "../mogdb-storage" }

tokio    = { workspace = true }
sqlx     = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
uuid     = { workspace = true }
chrono   = { workspace = true }
tracing  = { workspace = true }
reqwest  = { workspace = true }
thiserror = { workspace = true }
metrics  = { workspace = true }
